namespace DragonBall.GameStrings
{
    public static class GameString
    {
        #region Player
        public const string PlayerPrefabName = "Songoku";
        public const string PlayerAnimationRunBool = "isRunning";
        public const string PlayerAnimationJumpBool = "isJumping";
        public const string PlayerAnimationFlightBool = "isFlyingToggle";
        public const string PlayerAnimationDodgeBool = "isDodging";
        public const string PlayerAnimationKickTrigger = "isKickingTrigger";
        public const string PlayerAnimationFireTrigger = "isFiring";
        public const string PlayerAnimationKamekamehaTrigger = "isKamehameha";
        public const string PlayerAnimationDeathTrigger = "isDead";
        public const string PlayerAnimationTransformSuperSaiyanTrigger = "isTranformingSuperSaiyan";
        #endregion

        #region UI
        public const string GameplayUIPrefabName = "GameplayUI";
        #endregion
    }
}